feat: search with keyword